# mlops-project-1

./: .gitignore  Dockerfile  dvc.yaml  main.py  mlflow.db  pyproject.toml
.github/workflows/: mlops.yml
artifacts/: run_id.txt
data/: raw.csv.dvc
mlruns/0/8fbdb9f6e2be40c1845a5b5d3cef6b04/artifacts/: metrics.txt
mlruns/0/models/m-69eeb7d26f1c4ce6bebb75f53636fe36/artifacts/: MLmodel  conda.yaml  model.skops
mlruns/0/models/m-c02847d795d042a0a748f438e90219ee/artifacts/: MLmodel  conda.yaml  model.skops  requirements.txt
src/: create_dataset.py  evaluate.py  preprocess.py  serve.py  train.py  train2.py
