[project]
name = "mlops-project-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc>=3.67.1",
    "fastapi>=0.138.2",
    "joblib>=1.5.3",
    "mlflow>=3.14.0",
    "numpy>=2.5.0",
    "pandas>=2.3.3",
    "python-multipart>=0.0.32",
    "scikit-learn>=1.9.0",
    "uvicorn>=0.49.0",
]
